ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ec2-44-203-160-79.compute-1.amazonaws.com
      http:
        paths:
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 8080
          
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 8080
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  number: 3000
